This should solve #108 & #112 but might break stuff elsewhere so be vigilant: - wraps UILabel content with another span since the regular flow layout of multiple html element won't work in a flex parent -> #108 - default positioning during layout is now "fixed" - UILabel will remeasure after the first layout pass - SendOnLoadCallback will now take the maximum of offsetHeight & scrollHeight to prevent clipping -> we might need to watch out for relayout loops

--- a/src/main/components/label/UILabel.scss
+++ b/src/main/components/label/UILabel.scss
@@ -5,6 +5,14 @@
     align-items: flex-start;
     padding-top: 0.563rem;
     padding-bottom: 0.563rem;
+    overflow: hidden;
+
+    & > span {
+        flex-shrink: 0;
+        overflow: hidden;
+        width: 100%;
+        display: block;
+    }
 }
 
 .rc-label-html {
